--- a/desafio/package.json
+++ b/desafio/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "react": "^18.2.0",
+    "react-beforeunload": "^2.5.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
